# security-tools

./: .dockerignore  .gitignore  .gitlab-ci.yml  README-runtime-verify.md  README.md  pyproject.toml  requirements.txt  runtime-report.json  runtime-summary.md
cli/: run_security_review.py
data/control_plane_state/: artifacts.json  deployments.json  promotions.json
data/evidence/container_image__test-sec-project____sha256_abc123__/: execution_result.json  promotion_evidence.json
examples/: gitlab-consumer-example.yml
scripts/: scaffold_control_plane.py
security_tools/: cli.py  gitlab_api.py  models.py  parsers.py  reviewer.py
security_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
security_tools/catalog/: __init__.py  finding_catalog.yml  policy.yml  runtime-contract.yml  runtime_policy.yml
security_tools/clients/: __init__.py  gitlab_api.py
security_tools/control_plane/: __init__.py  config_loader.py  factory.py
security_tools/control_plane/api/: __init__.py  routes_artifacts.py  routes_deployments.py  routes_promotions.py
security_tools/control_plane/commands/: check_drift.py  evaluate_promotion.py  promote_artifact.py  record_deployment.py
security_tools/control_plane/config/: artifact_types.yaml  control_plane.yaml  environments.yaml  integrations.yaml
security_tools/intelligence/: __init__.py  engine.py  knowledge_loader.py  models.py  prompt_builder.py  recommendation_engine.py  retriever.py  security_intelligence_README.md
security_tools/loaders/: __init__.py  catalog_loader.py  policy_loader.py
security_tools/parsers/: __init__.py  checkov.py  common.py  gitleaks.py  hadolint.py  safety.py  trivy.py
security_tools/planning/: __init__.py  cli.py  models.py  scan_planner.py  stack_detector.py  yaml_renderer.py
security_tools/review/: __init__.py  dedup.py  heuristics.py  renderers.py  reviewer.py  severity.py  verdict.py
security_tools/runtime/: __init__.py  cli.py  contracts.py  dependencies.py  detector.py  docker_introspect.py  executor.py  models.py  policy.py  probes.py  renderers.py
templates/: security-review.yml  security-scans.yml  security-suite.yml
templates/base/: security-rules.yml
templates/control-plane/: control-plane-promotion.yml
templates/planning/: generate-security-pipeline.yml  run-dynamic-security-pipeline.yml  run-static-security-fallback.yml
templates/review/: security-review.yml
templates/runtime/: container-runtime-verify.yml
templates/scans/: container-scanning.yml  dependency-scan.yml  dockerfile-scan.yml  iac-scanning.yml  probe.yml  sast.yml  secret-detection.yml
templates/suites/: app-security-control-plane-suite.yml  dynamic-security-suite.yml  security-scans.yml  security-suite.yml
tests/review/: test_verdict.py
(+878 files in other folders)
